Quorum3/Library/Tests/Templating/Pass/GenericParentB.quorum
class GenericParentB
    action TestB(integer t)
    end
end